Added some last changes to UI on Dashcontent component

--- a/Frontend/src/Components/DashContent/DashContent.css
+++ b/Frontend/src/Components/DashContent/DashContent.css
@@ -18,6 +18,9 @@
     font-size: 2rem;
     color: #333;
     margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
 }
 
 .content-description {
